hphp/hack/test/typecheck/inout/bad_inout_use_arg8.php.exp
File "bad_inout_use_arg8.php", line 11, characters 5-16:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_arg8.php", line 11, characters 11-16:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
